<resources>
    <string name="app_name">socketTrans</string>


    <!-- ボタン　名称用 -->
    <string name="name_start">接続開始</string>
    <string name="name_reset">リセット</string>
    <string name="name_finish">終了</string>

    <!-- 右上　メニュー用 -->
    <string name="menu_setting">設定</string>
    <string name="menu_info">このアプリについて</string>

    <!-- 設定画面用 -->
    <string name="preference_general">一般設定</string>
    <string name="preference_network">ネットワーク設定</string>
        <!-- 設定画面　内部用　一般-->
        <string name="preference_thetaEncodingRate">方向感度</string>
        <string name="preference_thetaEncodingRateSummary">theta の符号化レベル</string>
        <string name="preference_distEncodingRate">移動量感度</string>
        <string name="preference_distEncodingRateSummary">dist の符号化レベル</string>

        <string name="preference_horizonMax">横軸最大値</string>
        <string name="preference_horizonMaxSummary">50までの値を目安に（最終的にはレベルで）</string>
        <string name="preference_verticalMax">縦軸最大値</string>
        <string name="preference_verticalMaxSummary">目安は3から5（最終的にはレベルで）</string>

        <string name="preference_boundaryJudge">リーン感度</string>
        <string name="preference_boundaryJudgeSummary">正の値のみ。目安は，5くらい（最終的にはレベルで）</string>
        <!-- 設定画面　内部用　ネットワーク-->
        <string name="preference_ipAddress">IPアドレス</string>
        <string name="preference_ipAddressSummary">接続先PCのIPアドレスを入力してください</string>
        <string name="preference_portNumber">ポート番号</string>
        <string name="preference_portNumberSummary">出力ポート番号を入力しください</string>

    <!-- デフォルト設定値 -->
    <string name="default_thetaEncodingRate">4</string>
    <string name="default_distEncodingRate">2000</string>
    <string name="default_horizon">30</string>
    <string name="default_vertical">4</string>
    <string name="default_ipAddress">192.168.1.6</string>
    <string name="default_portNumber">5000</string>
    <string name="default_boundaryJudge">5</string>
    <!-- info 用文章 -->
    <string name="text_info">
        このアプリについての説明。使い方の解説などを入れる。\nWPFのリンクを張ったりする。とか
    </string>
</resources>

