<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_general">
        <CheckBoxPreference
            android:key="on_off_preference"
            android:title="Check Status" />

        <EditTextPreference
            android:key="text_value_preference"
            android:title="Text Value" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_network">
        <EditTextPreference
            android:key="ipAddress_preference"
            android:title="@string/preference_ipAddress"
            android:summary="@string/preference_ipAddressSummary"
            android:dialogTitle="@string/preference_ipAddress" />
        <EditTextPreference
            android:key="portNumber_preference"
            android:title="@string/preference_portNumber"
            android:summary="@string/preference_portNumberSummary"
            android:dialogTitle="@string/preference_portNumber" />


    </PreferenceCategory>
</PreferenceScreen>
