<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_start"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="15dp"
        android:text="@string/name_start"
        app:layout_constraintBottom_toTopOf="@+id/button_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_setting"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="15dp"
        android:text="@string/menu_setting"
        app:layout_constraintBottom_toTopOf="@+id/button_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start" />

    <Button
        android:id="@+id/button_info"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="30dp"
        android:text="@string/menu_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_setting" />

</android.support.constraint.ConstraintLayout>